# scanoss-winnowing.py

./: .gitignore  CHANGELOG.md  Makefile  PACKAGE.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  scanoss.json  setup.cfg  setup.py  version.py
.github/workflows/: lint.yml  python-local-test.yml  python-publish-pypi.yml  python-publish-testpypi.yml  testpypi-linux.yml  testpypi-mac.yml  testpypi-src.yml  testpypi-win.yml  testpypi.yml  version-tag.yml
src/scanoss_winnowing/: __init__.py  _hpsm.c  _winnowing.c  header_filter.py  scanossbase.py  winnowing.py
tests/: test_headers_filter.py  winnowing-test.py
tools/: get_next_version.sh
