[metadata]
name = scanoss_winnowing
version = attr: scanoss_winnowing.__version__
author = SCANOSS
author_email = info@scanoss.com
license = MIT
description = Python Library implementing a C version of the SCANOSS Winnowing algorithm
long_description = file: PACKAGE.md
long_description_content_type = text/markdown
url = https://scanoss.com
project_urls =
    Source = https://github.com/scanoss/scanoss-winnowing.py
    Tracker = https://github.com/scanoss/scanoss-winnowing.py/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: C
    License :: OSI Approved :: MIT License
    Development Status :: 5 - Production/Stable
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows

[options]
packages = find_namespace:
package_dir =
    = src
include_package_data = True
python_requires = >=3.7
install_requires =
    crc32c>=2.2
    binaryornot

[options.packages.find]
where = src

[build_ext]
inplace=1
